--- a/source/include/config.h.in
+++ b/source/include/config.h.in
@@ -105,6 +105,7 @@
 #undef HAVE_NETMASK_IFREQ
 #undef HAVE_NETMASK_AIX
 #undef HAVE_CRYPT
+#undef HAVE_PUTPRPWNAM
 #undef WITH_MMAP
 #undef WITH_SYSLOG
 #undef WITH_SSL
@@ -629,6 +630,9 @@
 
 /* Define if you have the <net/if.h> header file.  */
 #undef HAVE_NET_IF_H
+
+/* Define if you have the <net/route.h> header file.  */
+#undef HAVE_NET_ROUTE_H
 
 /* Define if you have the <netinet/tcp.h> header file.  */
 #undef HAVE_NETINET_TCP_H
