--- a/source/include/config.h.in
+++ b/source/include/config.h.in
@@ -18,6 +18,9 @@
 /* Define to `int' if <sys/types.h> doesn't define.  */
 #undef gid_t
 
+/* Define if you have a working `mmap' system call.  */
+#undef HAVE_MMAP
+
 /* Define if your struct stat has st_rdev.  */
 #undef HAVE_ST_RDEV
 
@@ -84,6 +87,7 @@
 #undef AIX
 #undef BSD
 #undef IRIX
+#undef IRIX6
 #undef HPUX
 #undef QNX
 #undef SCO
@@ -91,6 +95,7 @@
 #undef NEXT2
 #undef RELIANTUNIX
 #undef HAVE_SHARED_MMAP
+#undef HAVE_MMAP
 #undef HAVE_SYSV_IPC
 #undef HAVE_FCNTL_LOCK
 #undef HAVE_FTRUNCATE_EXTEND
