--- a/source/configure.in
+++ b/source/configure.in
@@ -60,6 +60,7 @@ case "$host_os" in
 #
       case `uname =r` in
 			*10*|*11*)
+        		AC_MSG_RESULT([enabling large file support])
 				CPPFLAGS="$CPPFLAGS -D_LARGEFILE64_SOURCE"
 				;;
       esac
@@ -69,17 +70,37 @@ case "$host_os" in
 # files *at all* unless the -D_LARGE_FILE or -D_LARGE_FILE_API flags are set.
 #
     *aix4*)
+	  AC_MSG_RESULT([enabling large file support])
       CPPFLAGS="$CPPFLAGS -D_LARGE_FILES"
       ;;    
 #
 # Defines needed for Solaris 2.6/2.7 aka 7.0 to make it admit
 # to the existance of large files..
+# Note that -D_LARGEFILE64_SOURCE is different from the Sun
+# recommendations on large file support, however it makes the
+# compile work using gcc 2.7 and 2.8, whereas using the Sun
+# recommendation makes the compile fail on gcc2.7. JRA.
 #
 	*solaris*)
 		case `uname -r` in
 			5.6*|5.7*)
+			AC_MSG_RESULT([enabling large file support])
+			if test "$ac_cv_prog_gcc" = yes; then
+				${CC-cc} -v >conftest.c 2>&1
+				ac_cv_gcc_compiler_version_number=`grep 'gcc version' conftest.c`
+				rm -fr conftest.c
+				case "$ac_cv_gcc_compiler_version_number" in
+					"*gcc version 2.6*"|"*gcc version 2.7*")
+						CPPFLAGS="$CPPFLAGS -D_LARGEFILE64_SOURCE"
+						;;
+					*)
+						CPPFLAGS="$CPPFLAGS -D_LARGEFILE_SOURCE -D_FILE_OFFSET_BITS=64"
+						;;
+				esac
+			else
 				CPPFLAGS="$CPPFLAGS -D_LARGEFILE_SOURCE -D_FILE_OFFSET_BITS=64"
-				;;
+			fi
+			;;
 		esac
 		;;
 #
